HelloUltraviolet/Fixtures/RejectedSource/Statements/ReturnUnitMismatch/Source/Main.uv
//! Rejected statement specimen for empty return from a non-unit procedure.

public procedure returnUnitMismatchReference() -> i32 {
    return
}
